--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Tue Apr 24 19:11:06 CEST 2012
+#Wed May 23 19:54:11 CEST 2012
 app.grails.version=2.0.3
 app.name=cinnamon
-app.servlet.version=2.5
-app.version=0.1
+app.servlet.version=3.0
+app.version=0.0.2
+plugins.release=2.0.2
 plugins.spring-security-core=1.2.7.2
