--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Wed May 23 19:54:11 CEST 2012
-app.grails.version=2.0.3
+#Tue May 29 16:15:46 CEST 2012
+app.grails.version=2.0.4
 app.name=cinnamon
 app.servlet.version=3.0
 app.version=0.0.2
 plugins.release=2.0.2
+plugins.rest-client-builder=1.0.2
 plugins.spring-security-core=1.2.7.2
