--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Sep 21 17:32:57 CEST 2012
-app.grails.version=2.1.1
+#Mon Jan 14 12:24:20 CET 2013
+app.grails.version=2.2.0
 app.name=cinnamon
 app.servlet.version=3.0
 app.version=0.2.2
