Update Hibernate plugin; update Tomcat plugin; update Grails version.

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Aug 23 16:20:49 CEST 2014
-app.grails.version=2.4.3
+#Tue Jan 27 20:24:33 CET 2015
+app.grails.version=2.4.4
 app.name=cinnamon
 app.servlet.version=3.0
 app.version=0.2.2
