--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Nov 07 16:38:08 CET 2015
-app.grails.version=2.5.2
+#Fri Oct 07 16:54:37 CEST 2016
+app.grails.version=2.5.3
 app.name=cinnamon
 app.servlet.version=3.0
 app.version=3.6.0
