Upgrade to Grails 2.5.5 - Fix 137 Use new version of cinnamon-db plugin ( remove option for unencrypted passwords Fix #138 )

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Oct 07 16:54:37 CEST 2016
-app.grails.version=2.5.3
+#Thu Nov 03 12:01:32 CET 2016
+app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
 app.version=3.6.0
