--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Thu Nov 03 12:01:32 CET 2016
+#Fri Jun 29 15:42:56 CEST 2018
+app.buildNumber=2
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
-app.version=3.6.0
+app.version=3.8.0
