Allow user CLUD via XML commands (with example http request scripts)

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Oct 27 19:49:36 CEST 2018
-app.buildNumber=51
+#Sat Nov 03 18:18:13 CET 2018
+app.buildNumber=73
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
