--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sun Dec 30 17:47:55 CET 2018
-app.buildNumber=90
+#Sun Jun 02 14:57:45 CEST 2019
+app.buildNumber=93
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
