Fix validation of Link acls.

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sun Sep 22 17:40:08 CEST 2019
-app.buildNumber=129
+#Mon Mar 02 18:30:57 CET 2020
+app.buildNumber=134
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
