Change behavior of MicroserviceChangeTrigger so it the server returns the status code of the MCT on failure.
(instead of sending 200/OK and only reporting problems in the headers, letting the client wonder why nothing happened)

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Mon Mar 02 18:30:57 CET 2020
-app.buildNumber=134
+#Fri Jun 19 13:57:07 CEST 2020
+app.buildNumber=142
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
