Fix #198 Links are ownable, but do not implement Ownable interface
Background: Links have an owner, so they should be validated against ACLs with special group owner.

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Oct 17 10:22:43 CEST 2020
-app.buildNumber=169
+#Thu Nov 12 12:42:26 CET 2020
+app.buildNumber=170
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
