add new header field cinnamon-last-insert-id to MicroserviceChangeTrigger post-requests
id is generated by:
* osd::create
* osd::version
* osd::copy
* folder::create

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat Dec 11 00:53:48 CET 2021
-app.buildNumber=222
+#Sat May 21 15:48:45 CEST 2022
+app.buildNumber=269
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
